<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_700"
    tools:context=".Views.Auths.ForgotPasswordView">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:padding="10dp"
        android:adjustViewBounds="true"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_component_1"
        android:adjustViewBounds="true"
        android:paddingHorizontal="70dp"
        android:layout_marginVertical="50dp"
        android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/top_curve_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/lobster"
                android:gravity="center|center_horizontal"
                android:text="@string/fg_pass"
                android:textSize="20dp"
                android:textColor="@color/txt_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/error_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:id="@+id/error_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_error_24"
                        android:adjustViewBounds="true" />

                    <View style="@style/space_h_10" />

                    <TextView
                        android:id="@+id/error_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Please enter your email address"
                        android:textAppearance="@style/TextAppearance"
                        android:textColor="@color/txt_error" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/et_email"
                    android:hint="@string/email"
                    app:hintTextAppearance="@style/TextAppearance_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress"
                        android:text="@string/demo_email"
                        android:textAppearance="@style/TextAppearance"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/password_entry_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance_hint"
                        android:hint="@string/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textWebPassword"
                            android:text="@string/demo_password"
                            android:textAppearance="@style/TextAppearance"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <View style="@style/space_v_10" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance_hint"
                        android:hint="@string/cmf_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_cfm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textWebPassword"
                            android:text="@string/demo_password"
                            android:textAppearance="@style/TextAppearance"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <View style="@style/space_v_10" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/input_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/purple_700"
                    android:layout_gravity="right|bottom"
                    android:contentDescription="@string/todo"
                    app:fabSize="mini"
                    app:tint="@color/color_f2"
                    app:srcCompat="@drawable/ic_arrow_right"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>