<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="18dp"
        android:paddingHorizontal="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:text="@string/receiver_confirmation"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/sub_title_color"
            android:textStyle="normal"
            android:fontFamily="@font/roboto"
            android:text="@string/otp_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:cursorVisible="true"
            android:hint="@string/todo"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColor="@color/txt_black"
            android:textColorHint="#78909C"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/txt_error"
            app:cursorWidth="2dp"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="5dp"
            app:itemWidth="49dp"
            app:lineColor="@color/purple_500"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/btn_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/task_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto"
                android:textColor="@color/text_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:letterSpacing="0"
                android:backgroundTint="@color/black"
                android:text="Cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/task_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:letterSpacing="0"
                android:layout_marginStart="5dp"
                android:textColor="@color/text_white"
                android:backgroundTint="@color/purple_500"
                android:textAllCaps="false"
                android:text="Accept" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>