<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="63dp"
                android:layout_height="63dp"
                android:src="@drawable/demo_graphic_user"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo" />

            <View
                android:layout_width="17dp"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/receiver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/title_color"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/demo_user_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5.0"
                        android:textColor="@color/title_color"
                        android:textStyle="normal"
                        android:fontFamily="@font/roboto"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_alignEnd="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/call_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/phone_call"
                android:adjustViewBounds="true"
                android:padding="11dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/msg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="11dp"
                android:src="@drawable/chat"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/map_pin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo" />

        <View
            android:layout_width="15dp"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:fontFamily="@font/roboto"
                android:textFontWeight="600"
                android:textColor="@color/title_color"
                android:layout_marginBottom="3dp"
                android:text="@string/pickup_point"/>

            <TextView
                android:id="@+id/pickup_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/sub_title_color"
                android:text="@string/location_text"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/map_pin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo" />

        <View
            android:layout_width="15dp"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:fontFamily="@font/roboto"
                android:textFontWeight="600"
                android:textColor="@color/title_color"
                android:layout_marginBottom="3dp"
                android:text="@string/destination"/>

            <TextView
                android:id="@+id/destination_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/sub_title_color"
                android:text="@string/location_text"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/task_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:letterSpacing="0"
        android:layout_marginStart="5dp"
        android:textColor="@color/text_white"
        android:backgroundTint="@color/purple_500"
        android:visibility="gone"
        android:textAllCaps="false"
        android:text="Start Ride" />


</LinearLayout>