<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_700"
    tools:context=".Views.Auths.OTPView">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_component_1"
        android:adjustViewBounds="true"
        android:paddingHorizontal="70dp"
        android:layout_marginVertical="50dp"
        android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/top_curve_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/lobster"
                android:gravity="center|center_horizontal"
                android:text="@string/otp"
                android:textSize="20dp"
                android:textColor="@color/txt_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome_otp_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/otp_msg"
                    android:paddingBottom="10dp"
                    android:textAppearance="@style/TextAppearance" />


                <com.chaos.view.PinView
                    android:id="@+id/pin_view"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:cursorVisible="true"
                    android:hint="@string/todo"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="5dp"
                    android:textColor="@color/txt_black"
                    android:textColorHint="#78909C"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/txt_error"
                    app:cursorWidth="2dp"
                    app:itemCount="6"
                    app:itemHeight="48dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="5dp"
                    app:itemWidth="48dp"
                    app:lineColor="@color/purple_500"
                    app:lineWidth="2dp"
                    app:viewType="rectangle" />

                <View style="@style/space_v_10" />

                <LinearLayout
                    android:id="@+id/error_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:id="@+id/error_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_error_24"
                        android:adjustViewBounds="true" />

                    <View style="@style/space_h_10" />

                    <TextView
                        android:id="@+id/error_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Please enter your email address"
                        android:textAppearance="@style/TextAppearance"
                        android:textColor="@color/txt_error" />
                </LinearLayout>

                <View style="@style/space_v_10" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/resend_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/purple_500"
                        android:text="Resend Code"
                        android:clickable="false"
                        android:enabled="false"
                        android:alpha="0.3"
                        android:textAppearance="@style/TextAppearance"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/input_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@color/purple_700"
                        android:contentDescription="@string/todo"
                        app:fabSize="mini"
                        app:tint="@color/color_f2"
                        app:srcCompat="@drawable/ic_arrow_right"/>

                </RelativeLayout>

                <View style="@style/space_v_10" />

                <LinearLayout
                    android:id="@+id/time_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance"
                        android:text="@string/remaining_time"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/remaining_time_sec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/purple_500"
                        android:text="30 Sec"
                        android:textSize="13sp"
                        android:textAppearance="@style/TextAppearance"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>